# getzy

./: .gitignore  README.md  RELEASE_NOTES.md  pubspec.yaml
.claude/commands/: speckit-constitution.md  speckit-help.md  speckit-implement.md  speckit-plan.md  speckit-tasks.md  speckit-workflow.md
.specify/: CONSTITUTION.md  PLAN.md  README.md  SPECIFICATION.md  TASKS.md  WORKFLOW.md
.specify/extensions/: .registry
.specify/extensions/git/: git-config.yml
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
android/app/: build.gradle
android/libtorrent/: CMakeLists.txt
android/libtorrent/jni/: torrent_bridge.cpp
assets/texts/: legal.md  privacy.md
lib/: main.dart
lib/app/: getzy_app.dart  getzy_theme.dart
lib/features/feeds/: feed_manager_screen.dart  feed_models.dart  feed_repository.dart
lib/features/onboarding/: onboarding_screen.dart
lib/features/session/: session_status_screen.dart
lib/features/settings/: about_screen.dart  settings_repository.dart  (+1 more)
specs/001-getzy-torrent-downloader/: plan.md  spec.md  tasks.md  test-plan.md
specs/002-feature-completion/: real-engine-plan.md  spec.md  tasks.md
test/: home_tab_sort_test.dart  integration_app_test.dart  onboarding_widget_test.dart  settings_widget_test.dart  widget_test.dart
test/unit/: engine_behavior_test.dart  engine_conformance_test.dart  rss_feed_test.dart  torrent_models_test.dart  torrent_validators_test.dart
(+24 files in other folders)
